# otus-rust-2024-project

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: rust.yml
configs/: prometheus.yml  server.yaml
configs/server/: config.yaml
configs/tests/: config.yaml
deploy/: Dockerfile  Dockerfile-tests  docker-compose-tests.yaml  docker-compose.yaml
proto/: api.proto  auth.proto
server/: Cargo.toml
server/deploy/: docker-compose.yaml
server/proto/: api.proto  auth.proto
server/sql/: V1__Initial.sql
server/src/: app.rs  main.rs
server/src/app/: api.rs  config.rs  connection.rs  migrations.rs  rate_limit.rs
server/src/app/ip_list/: ip.rs  list.rs
server/src/app/service/: auth.rs
server/src/server/rate_limit/: bucket.rs  rate.rs
server/src/server/service/: auth.rs
server/tests/: api_test_ip_list.rs  behavioral_test_ip.rs  integration_test_ip_list.rs  readme.rs  test_ip_list.rs
server/tests/api/features/: add_ip.feature  auth.feature  auth_black_list.feature  check_auth_for_ip.feature  check_auth_for_password.feature  delete_ip.feature
server/tests/api/ip_list/features/: add_ip.feature
sql/: V1__Initial.sql  V1__ip_list.sql  V2__roles.sql
src/: app.rs  main.rs  server.rs
src/app/: api.rs  config.rs  connection.rs  ip_list.rs  migrations.rs  rate_limit.rs  roles.rs
src/app/auth/: token.rs
src/app/ip_list/: ip.rs  list.rs
src/app/rate_limit/: rate.rs
src/app/roles/: permission.rs  role.rs  storage.rs
src/server/: rate_limit.rs
src/server/rate_limit/: bucket.rs  storage.rs
src/server/service/: auth.rs  config.rs
tests/: behavioral_test_ip.rs  integration_test_ip_list.rs  test_api.rs  test_ip_list.rs  test_roles.rs
tests/api/features/: add_ip.feature  add_role.feature  check_auth_for_ip.feature  check_auth_for_login.feature  check_auth_for_password.feature  delete_ip.feature
