[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
cargo-expand = "1.0.88"
cidr = "=0.2.2"
clap = "4.5.6"
env_logger = "0.11.3"
log = "0.4.21"
password-auth = "1.0.0"
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prost = "0.12.6"
prost-derive = "0.12.6"
rand = "0.8.5"
random-string = "1.1.0"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
serde = "1.0.203"
serde_yml = "0.0.10"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-bit-vec-0_6"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
cucumber = "0.21.0"

[[test]]
name = "test_ip_list"

[[test]]
name = "test_roles"

[[test]]
name = "test_api"
harness = false   # allows Cucumber to print output instead of libtest
