[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-expand = "1.0.88"
cidr = "=0.2.2"
postgres = "0.19.7"
prost = "0.12.6"
prost-derive = "0.12.6"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
serde = "1.0.203"
serde_yml = "0.0.10"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
